--- a/common/common.scss
+++ b/common/common.scss
@@ -1,33 +1,37 @@
 /* 0.1 Defaults and typography */
 body {
-    font-family: 'Ubuntu', sans-serif;
-    font-weight: 300;
-    text-rendering: optimizeLegibility;
-    -moz-osx-font-smoothing: grayscale;
-    background-color: #070f24;
+  font-family: 'Ubuntu', sans-serif;
+  font-weight: 300;
+  text-rendering: optimizeLegibility;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #f3f4f5;
 }
 
 
 /* 10 Discourse specific */
 
-div#main-outlet {
-    background: #f3f4f5 url($background-image);
-    background-repeat: no-repeat;
-    background-size: 100% auto;
-    background-position: right -130px;
-    position: relative;
-    margin: 0;
-    padding: 0;
-    font-family: 'Ubuntu', sans-serif;
-    -webkit-font-smoothing: antialiased;
-    text-rendering: optimizeLegibility;
-    color: black;
+#main {
+  background: #f3f4f5 url($background-image);
+  background-repeat: no-repeat;
+  background-size: 100% auto;
+  background-position: right top;
 }
 
-header {
-    height: 130px;
-    background: rgb(7,15,36) url($background-image);
-    background-position: right top;
-    background-repeat: no-repeat;
-    background-size: 100% auto;
+div#main-outlet {
+  position: relative;
+  padding-top: 150px;
+  font-family: 'Ubuntu', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+  color: black;
+  background: none;
+}
+
+header,
+header.d-header {
+  height: 130px;
+  background: rgb(7,15,36) url($background-image);
+  background-position: right top;
+  background-repeat: no-repeat;
+  background-size: 100% auto;
 }
