--- a/common/common.scss
+++ b/common/common.scss
@@ -8,6 +8,105 @@ body {
 }
 
 
+/* 1.2 Navigation */
+
+#navWrapper {
+  position: absolute;
+  width: 100%;
+  z-index: 100000;
+}
+
+nav {
+  z-index: 10000;
+  margin: 45px auto;
+
+  ul {
+    list-style: none;
+    background: transparent;
+    overflow: hidden;
+    color: #fff;
+    padding: 0 0 0 30px;
+    transition: 1s;
+
+    li {
+      display: inline-block;
+      padding: 10px 16px;;
+    }
+  }
+
+  #logo {
+    float: left;
+    color: #fff;
+    font-weight: bold;
+    font-size: 20px;
+    letter-spacing: 2px;
+    z-index: 9999 !important;
+
+    #symcon_logo {
+      width: 160px;
+      height: 26px;
+      vertical-align: bottom;
+    }
+
+    .cls-sym {
+      fill: #fff;
+    }
+  }
+}
+
+
+#search-ani:hover, .header-icon:hover a:hover {
+  color:#32c9ac;
+  text-decoration: none;
+}
+
+#searchbox {
+  display: none;
+}
+
+nav ul li a {
+  font-weight:300;
+  text-decoration: none;
+  color: #fff;
+  font-size: 15px;
+  text-transform: uppercase;
+}
+
+a {
+  transition: color .5s;
+}
+
+#search-ani, .header-icon{
+  font-weight:300;
+  text-decoration: none;
+  color: #fff;
+  font-size: 16px;
+  cursor: pointer;
+  transition: color .5s;
+}
+
+nav ul li a.active {
+  font-weight:700;
+  font-size: 16px;
+}
+
+#mobile-nav-open, #mobile-nav-close{
+  color:#fff;
+  position: absolute;
+  right:0px;
+  margin:0px 20px;
+  display:none;
+  font-size:25px;
+  cursor: pointer;
+}
+
+#mobile-nav-close{z-index:9999 !important;}
+
+.menu{
+  display:inline;
+}
+
+
 /* 10 Discourse specific */
 
 #main {
@@ -24,7 +123,7 @@ div#main-outlet {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   color: black;
-  background: none;
+  background: rgba(255,255,255,0.5);
 }
 
 header,
@@ -34,4 +133,13 @@ header.d-header {
   background-position: right top;
   background-repeat: no-repeat;
   background-size: 100% auto;
+}
+
+.d-header-icons .d-icon {
+  color: #fff;
+}
+
+/* FIXME: I bet we can do this outside the theme */
+#site-logo {
+  display: none;
 }
