--- a/common/common.scss
+++ b/common/common.scss
@@ -173,6 +173,8 @@ a {
 }
 
 .extra-info-wrapper {
+  margin-left: 200px;
+
   .title-wrapper {
     color: #fff;
 
@@ -180,7 +182,7 @@ a {
     .badge-wrapper.bullet span.badge-category,
     .topic-statuses,
     .topic-link {
-      color: #fff;
+      color: #fff!important;
     }
   }
 }
